--- a/src/cardspage.html
+++ b/src/cardspage.html
@@ -18,30 +18,6 @@
                     <img class="nav-bar-img" src="./styles/img/logo.png" alt="Logo da página">
                 </a>
             </button>
-            <div class="navbar-menu">
-                <div class="hamburguer-menu"> <!-- ÍCONE DO MENU HAMBÚRGUER -->
-                    <input type="checkbox" class="checkbox-menu" id="checkbox-menu">
-                    <label for="checkbox-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </label>
-                </div>
-                <ul class="menu-list" id="menu-list">
-                    <li class="menu-item hide">
-                        <a href="./index.html">Página inicial</a>
-                    </li>
-                    <li class="menu-item hide">
-                        <a href="./about.html">Sobre</a>
-                    </li>
-                    <li class="menu-item hide">
-                        <a href="https://www.pokemon.com/br/" target="_blank">Site oficial Pokémon</a>
-                    </li>
-                    <li class="menu-item hide">
-                        <a href="https://pokemongolive.com/pt_br/" target="_blank">Site oficial do jogo</a>
-                    </li>
-                </ul>
-            </div>
         </nav>
         <section class="section-search">
             <p>Buscar por: </p>
@@ -94,7 +70,7 @@
         </section>
 
         <div class="pokemonList" id="pokemonList"></div>
-        <button class="button-top" id="buttonTop" style="display: none;">
+        <button class="button-top" id="buttonTop">
             <img src="./styles/img/icons8-seta-para-recolher-96.png" alt="Seta de topo">
         </button>
     </main>
