Estilização da versão shiny

--- a/src/cardspage.html
+++ b/src/cardspage.html
@@ -44,7 +44,7 @@
                 <option value="legendary">Legendário</option>
                 <option value="mythic">Mítico</option>
                 <option value="normal">Normal</option>
-                <option value="normal">Shiny</option>
+                <option value="shiny">Shiny</option>
             </select>
             <select id="eggsFilter">
                 <option value disabled selected>Ovos</option>
