Atualização do footer na home

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header>
       <img class="nav-bar-img" src="./styles/img/logo.png" alt="Logo da página">
     </header>
-  
+
     <main class="main-content">
       <section class="main-welcome">
         <h1>Sejam bem-vindes,<br>Treinadores!</h1>
@@ -31,31 +31,17 @@
         </button>
       </section>
     </main>
-  
+
     <footer class="footer-navigation">
-      <section class="footer-links">
-        <a href="https://www.pokemon.com/br/" target="_blank">Site Pokémon</a>
-        <a href="https://pokemongolive.com/pt_br/" target="_blank">Site do jogo</a>
-      </section>
-  
-      <section class="footer-buttonsDownload">
-        <button>
-          <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo" target="_blank">
-            <img src="./styles/img/googleplay-button.png" alt="Logo de Download Google Play">
-          </a>
-        </button>
-        <button>
-          <a href="https://apps.apple.com/vc/app/pok%C3%A9mon-go/id1094591345" target="_blank">
-            <img src="./styles/img/appstore-button.png" alt="Logo de Download App Store">
-          </a>
-        </button>
-      </section>
-  
-      <section class="footer-githubLink">
-        <a href="https://github.com/CassiaCosta" target="_blank">
-          <img src="./styles/img/GitHub-Emblem.png" alt="Logo GitHub">
-        </a>
-      </section>
+      <p>Copyright &copy; Desenvolvedoras:</p>
+      <p><a href="https://github.com/Cahaguiar" target="_blank">Camila Aguiar</a>, <a
+          href="https://github.com/CassiaCosta" target="_blank">Cássia
+          Costa</a>, <a href="https://github.com/RaynaraPimenta" target="_blank">Raynara Pimenta</a>, <a
+          href="https://github.com/taizesantos" target="_blank">Taize
+          Santos</a>, <a href="https://github.com/lidiannerb" target="_blank">Lidianne Barbosa</a>, <a
+          href="https://github.com/Fernanda741" target="_blank">Fernanda Leandra</a> e <a
+          href="https://github.com/DevFranci" target="_blank">Franciele
+          Mesquita</a></p>
     </footer>
   </div>
 
