filtragem por modo shiny

--- a/src/cardspage.html
+++ b/src/cardspage.html
@@ -44,6 +44,7 @@
                 <option value="legendary">Legendário</option>
                 <option value="mythic">Mítico</option>
                 <option value="normal">Normal</option>
+                <option value="shiny">Shiny</option>
             </select>
             <select id="regionFilter">
                 <option value disabled selected>Região de origem</option>
@@ -70,6 +71,7 @@
         </section>
 
         <div class="pokemonList" id="pokemonList"></div>
+        <div class="modal"></div>
         <button class="button-top" id="buttonTop">
             <img src="./styles/img/icons8-seta-para-recolher-96.png" alt="Seta de topo">
         </button>
